# noxia

./: .clang-format  .clangd  CMakeLists.txt  build-app.bat  build.bat  winNoxiaArgs.rsp
example/: main.c
examples/: window.c
include/: noxia.h  typedef.h
include/noxia/: math.h  typedef.h
include/noxia/win/: extgl.h  sysdef.h  sysdisplay.h  sysgraphics.h  sysinput.h  sysscheduler.h  syswindow.h
include/win/: typedef.h  window.h
src/: noxia.c
